# toxic_comment_detection

./: .gitignore  .pre-commit-config.yaml  README.md  data_loader.ipynb  pyproject.toml  train.py  transformer.ipynb
dataset/: data_cleaning.py  download_dataset.py  load_data.py
models/bert/: bert_inference_pipeline.ipynb  toxic_bert_pipeline.ipynb
models/biLSTM/: LSTM.ipynb  config.py  data_cleaning.py  inference.py  main.py  model.py  train.py
models/distillBert/: distil_inference_pipeline.ipynb  toxic_distilbert_pipeline_train.ipynb
models/fullTransformer/: trainer.py
models/llama/: final.ipynb  llama.ipynb
models/roberta/: roberta_inference_pipeline.ipynb  toxic_roberta_pipeline.ipynb
models/transformer/: model.py  trainer.py
notebooks/: data_loader.ipynb
