[project]
name = "cs7643-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "jupyterlab>=4.4.0",
    "kagglehub>=0.3.11",
    "numpy>=2.2.4",
    "pre-commit>=4.2.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
